--- a/flujotv.html
+++ b/flujotv.html
@@ -1,4 +1,4 @@
-﻿<head>
+<head>
 <meta content='3; URL=https://dl.dropbox.com/scl/fi/0tpnu4otyomvplhcedfex/flujotv_tv_v7.1.8.apk?rlkey=w056s066ksdjtc3rmfry0pn2d&dl=0' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
@@ -13,6 +13,6 @@
 </style>
 
 <center>
-<img alt="FLUJO TV" height="356" longdesc="FLUJO TV" src="https://www.dropbox.com/scl/fi/1i9k08l7711zk5zc6egyd/flujotv.png?rlkey=mex7iskcpqlep33fhvslisfr0&dl=0" width="644" /><br>
+<img alt="FLUJO TV" height="356" longdesc="FLUJO TV" src="https://dl.dropbox.com/scl/fi/1i9k08l7711zk5zc6egyd/flujotv.png?rlkey=mex7iskcpqlep33fhvslisfr0&dl=0" width="644" /><br>
 <span class="auto-style1"><strong>Version Para TV: 7.1.8<br></strong></span>
 <span class="auto-style2"><strong>La Descarga Se Procesara Automaticamente.</strong></span>
