--- a/flujotv-movil.html
+++ b/flujotv-movil.html
@@ -1,4 +1,4 @@
-﻿<head>
+<head>
 <meta content='3; URL=https://dl.dropbox.com/scl/fi/1r256yoonxlljh3jzepk7/flujotv_movil_v7.1.8.apk?rlkey=3idyqbrylry5rdtykkppmwwyk&dl=0' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
