--- a/flujotv.html
+++ b/flujotv.html
@@ -13,6 +13,6 @@
 </style>
 
 <center>
-<img alt="FLUJO TV" height="356" longdesc="FLUJO TV" src="https://www.dropbox.com/scl/fi/1i9k08l7711zk5zc6egyd/flujotv.png?rlkey=mex7iskcpqlep33fhvslisfr0&dl=0" width="644" /><br>
+<img alt="FLUJO TV" height="356" longdesc="FLUJO TV" src="https://previews.dropbox.com/p/thumb/ACiWTDkeWS9n7ZCodn9-jaQvnc1IHFMYBMh3k4TgmoHALdGAjBhJ72MrUJOpv0DwFBRR4VKrJLKelWQkAziLRsSE3CVz2AVZyQl0H_kj3Kluas5xhoFBWNaYJeUbcMWWQqQ9nj6iIGReedi9zEstjmbVGccVYtSQtdTqfob-91AhbuvCBlkLpEbHRmCSK3XswQ6rccGzkI5acmpcvF4FXmYjc7RoVcNEZwqS4XJt64-52nVxn19O5peMIVIJ1Y8oAGWttGqA56Ayp4i59SsoIAZv2SBnjDYcTl7AofOTiD8S6ISQZ6mV5q8W0T9GQgdtxcfOb5VUzKe0kB_pvU2X50F_/p.png?is_prewarmed=true" width="644" /><br>
 <span class="auto-style1"><strong>Version Para TV: 7.1.8<br></strong></span>
 <span class="auto-style2"><strong>La Descarga Se Procesara Automaticamente.</strong></span>
