--- a/flujotv-movil.html
+++ b/flujotv-movil.html
@@ -1,5 +1,5 @@
 <head>
-<meta content='3; URL=https://dl.dropbox.com/scl/fi/1r256yoonxlljh3jzepk7/flujotv_movil_v7.1.8.apk?rlkey=3idyqbrylry5rdtykkppmwwyk&dl=0' HTTP-EQUIV='Refresh'/>
+<meta content='3; URL=https://www.dropbox.com/scl/fi/1r256yoonxlljh3jzepk7/flujotv_movil_v7.1.8.apk?rlkey=3idyqbrylry5rdtykkppmwwyk&dl=1' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
 .auto-style1 {
