--- a/flujotv.html
+++ b/flujotv.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
 <meta content='3; URL=https://www.dropbox.com/scl/fi/0tpnu4otyomvplhcedfex/flujotv_tv_v7.1.8.apk?rlkey=w056s066ksdjtc3rmfry0pn2d&dl=1' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
