--- a/sistema.html
+++ b/sistema.html
@@ -1,1 +1,7 @@
-﻿<meta content='1; URL=https://easyproweb.softwarescorpion.com/' HTTP-EQUIV='Refresh'/>
+<html>
+<head>
+<script>
+window.location.replace("https://easyproweb.softwarescorpion.com");
+</script>
+</head>
+</html>
