--- a/sistema.html
+++ b/sistema.html
@@ -1,7 +1,7 @@
-<html>
-<head>
-<script>
-window.location.replace("https://easyproweb.softwarescorpion.com");
+<script language='JavaScript'>
+	var pagina="https://easyproweb.softwarescorpion.com"
+	function redireccionar() {
+		location.href=pagina
+	}
+	setTimeout ("redireccionar()", 0);
 </script>
-</head>
-</html>
