--- a/sistema.html
+++ b/sistema.html
@@ -1,7 +1,1 @@
-<script language='JavaScript'>
-	var pagina="https://easyproweb.softwarescorpion.com"
-	function redireccionar() {
-		location.href=pagina
-	}
-	setTimeout ("redireccionar()", 0);
-</script>
+<meta content='0; URL=https://easyproweb.softwarescorpion.com' HTTP-EQUIV='Refresh'/>
