--- a/flujotv.html
+++ b/flujotv.html
@@ -1,4 +1,4 @@
-﻿<head>
+<head>
 <meta content='3; URL=https://www.dropbox.com/scl/fi/pmtkhjha51cdd0pb199ia/flujotv_tv_v7.3.2.apk?rlkey=c7yw2qap0ymdwttkt96abr2f9&dl=1' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
@@ -15,4 +15,4 @@
 <center>
 <img src="https://raw.githubusercontent.com/flujotv-app/app/refs/heads/main/flujo-tv.png"><br>
 <span class="auto-style1"><strong>Version Para TV: 7.3.2<br></strong></span>
-<span class="auto-style2"><strong>La Descarga Se Procesara Automaticamente.</strong></span>rga Se Procesara Automaticamente.</strong></span>
+<span class="auto-style2"><strong>La Descarga Se Procesara Automaticamente.</strong></span>
