--- a/flujotv-movil.html
+++ b/flujotv-movil.html
@@ -1,5 +1,5 @@
 <head>
-<meta content='3; URL=https://www.dropbox.com/scl/fi/6nbkw43f79bra0f6fppnl/flujotv-movil-v7.10.1.apk?rlkey=9t956heln08b09p8ylmpl4wd3&dl=1' HTTP-EQUIV='Refresh'/>
+<meta content='3; URL=https://www.dropbox.com/scl/fi/ciew0fggbwwnav2axsttk/flujotv-tv-v7.10.1.apk?rlkey=whdt3rexkt5rey9c4mkvtuc3q&dl=1' HTTP-EQUIV='Refresh'/>
 
 <style type="text/css">
 .auto-style1 {
@@ -14,5 +14,5 @@
 
 <center>
 <img src="https://raw.githubusercontent.com/flujotv-app/app/refs/heads/main/flujo-tv.png"><br>
-<span class="auto-style1"><strong>Version Para Movil: 7.10.1<br></strong></span>
+<span class="auto-style1"><strong>Version Para TV: 7.10.1<br></strong></span>
 <span class="auto-style2"><strong>La Descarga Se Procesara Automaticamente.</strong></span>
